<resources>
    <string name="app_name">东方购物</string>
    <string name="music">音乐</string>
    <string name="backup">云端</string>
    <string name="friends">朋友圈</string>
    <string name="favor">收藏</string>
    <string name="visibility">发现</string>
    <string name="login_help">遇到问题？东东帮您 ></string>
    <string name="login">登  录</string>
    <string name="register">注  册</string>
    <string name="commit">确 认</string>

    <string name="title_rapid_register">新会员注册</string>
    <string name="title_account_association">关联帐号</string>
    <string name="title_safety_verification">安全校验</string>
    <string name="title_retrieve_pwd">找回密码</string>
    <string name="title_third_party_login">第三方登录</string>

    <string name="text_update_now">立即更新</string>
    <string name="text_login_welcome">欢迎登录</string>
    <string name="text_terms">《东方购物网络使用条款》</string>
    <string name="text_register_is_agree">注册即视为同意</string>
    <string name="text_weibo">微博</string>
    <string name="text_QQ">QQ</string>
    <string name="text_wechat">微信</string>
    <string name="text_bestv">Bestv</string>
    <string name="text_alipay">支付宝</string>
    <string name="text_forgot_pwd">忘记密码</string>
    <string name="text_change_account">切换账号</string>
    <string name="text_dynamic_pwd">使用动态密码登录</string>

    <string name="hint_login_edit">请输入手机号 / 邮箱 / 用户名 / 固定电话</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="hint_input_name">请输入姓名</string>
    <string name="hint_input_mobilecode">请输入短信验证码</string>
    <string name="hint_input_mobile_num">请输入手机号</string>
    <string name="hint_input_login_pwd">设置登录密码</string>
    <string name="hint_input_user_name">请输入您曾经订购时使用的姓名</string>
    <string name="hint_input_register_num">请输入注册时所用手机号</string>
    <string name="hint_input_pwd_again">请再次输入密码</string>
    <string name="hint_input_new_pwd">请输入新密码</string>
    <string name="hint_input_old_pwd">请输入当前密码</string>

    <string name="btn_fetch_verify_code">获取验证码</string>
    <string name="btn_commit_association">确认关联</string>
    <string name="btn_not_vip">我还不是会员</string>
    <string name="btn_is_vip">我是会员</string>
    <string name="btn_next_step">下一步</string>
    <string name="login_bypwd">使用密码登录</string>

    <string name="newuser_register">新会员注册</string>

    <string name="hint_input_mobile_email">请输入手机号</string>
    <string name="hint_input_reset_password">请输入手机号或邮箱</string>
    <string name="share_weixin_toast">本机未安装微信</string>


    <string name="gift_certificate">礼券兑换</string>
    <string name="gift_certificate_no">请输入礼券号</string>
    <string name="gift_certificate_pwd">请输入礼券密码</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exchange_commit">确认兑换</string>

    <string name="input_exchange">请输入代码兑换抵用券</string>

    <string name="baking_sense">烘焙小常识</string>

    <string name="realname_certification">
        个人消费者在本网站购买进境保税商品的，应当提供收件人
        真实姓名和身份证号码，同意委托本网站或者其他代理企业
      代表收件人向海关办理通关申报和税款缴纳手续。个人消费
      者需要正确填写订单信息，禁止虚假信息，购买商品符合个
      人自用合理数量，禁止二次销售。若个人消费者购买商品超
      出个人自用原则，将受执法部门核查，情节严重者，将依法
      追究刑事责任。
    </string>

    <string name="aboard_tax">OCJ所销售的跨境保税商品，依据中华人民共和国海关总署公告，
        跨境电商零售进口商品由原来征收的行邮税（海关对入境旅客行李物品和个人邮递物品征收的进口税）
        改为由关税、增值税、消费税组合而成的综合税负，进口商品的单次交易限额也从1000元（港澳台地区为800元）
        调整为2000元，同时将设置个人年度交易限值为20000元。限额内免收关税，
        进口环节增值税、消费税按照法定应纳税额的70%征收；限额之外则按照一般贸易方式全额征税。
    </string>
    <string name="history_name">请输入历史收货人姓名</string>
    <string name="band_mobile">绑定手机号</string>
    <string name="filter_txt">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <!--收货地址-->
    <string name="adress_manager">收货信息管理</string>

    <string name="nick_name">修改昵称</string>

    <string name="edit_email">修改邮箱</string>
    <string name="edit_mobile">修改手机号</string>
    <string name="text_intergral_tips">您有%1$s分(=%2$s元) 即将过期</string>
    <string name="text_points">可用%1$s积分</string>
    <string name="text_imprest">可用￥%1$s预付款</string>
    <string name="text_gift_package">可用￥%1$s礼包</string>
    <string name="text_money">￥%1$s</string>
    <string name="text_deduction_money">抵￥%1$s</string>

    <!--退换货-->
    <string name="return_goods_reason">退货原因</string>
    <string name="choose_return_goods_reason">退货原因</string>
    <string name="apply_return_goods">申请退货</string>
    <string name="apply_exchange_goods">申请换货</string>
    <string name="return_des">退货说明</string>
    <string name="goods_is_ok">商品是否完好</string>
    <string name="missing_main_gift">缺少主赠品</string>
    <string name="outside_package_broken">外包装损坏</string>
    <string name="refund_method">退款方式</string>
    <string name="transfer_payment">转预付款</string>
    <string name="original_payment_method_returned">原支付方式退回</string>
    <string name="cash_encryption_returned">现金加密退回</string>
    <string name="upload_credentials">上传凭证（可选，最多9张）</string>
    <string name="confirm_submission">确认提交</string>
    <string name="if_be_used">收货后是否使用过</string>
    <string name="be_used">使用过</string>
    <string name="not_be_used">未使用过</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="please_exchange_goods">请选择您要换的商品</string>

    <string name="item_select">已选 “%1$s”“%2$s”</string>
    <string name="item_select_spec">已选 “%1$s”</string>
    <string name="text_dot">· 即将播出</string>
    <string name="text_game">小游戏</string>

    <string name="text_order_pay_tips"><![CDATA[您一共有 %1$d 笔订单需要支付，请在<font color="#E5290D">30分钟</font>内完成，不然就要溜走了！]]></string>

    <string name="space_text">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;%1$s</string>

    <string name="space_text_vip">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;%1$s</string>
    <string name="space_text_20">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;%1$s</string>
    <string name="space_text_7">&#160;&#160;&#160;&#160;&#160;&#160;&#160;%1$s</string>
    <string name="space_text_15">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;%1$s</string>
    <string name="space_text_12">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;%1$s</string>
    <string name="count_down_time"><![CDATA[ <font color="#F64537">%1$s</font> 天 <font color="#F64537">%2$s</font> 时 <font color="#F64537">%3$s</font> 分 <font color="#F64537">%4$s</font> 秒]]></string>
    <string name="cheap_than_live"><![CDATA[比直播便宜<font color="#E5290D">¥%1$s</font>]]></string>
    <string name="people_already_buy">%1$s人已购买</string>
    <string name="quantity_choice">数量选择(每人限购%1$d件)</string>
    <string name="h5_pay_text"><![CDATA[<html><head><script language=javascript>setTimeout(\'document.form.submit()\',1000)</script></head><body> %1$s </body></html>]]></string>
    <string name="use_instrution">1. 东方购物心意畅想礼包可购买东方购物电视、网站、目录所有产品（特殊商品除外）。
东方购物心意畅想礼包可在电话订购商品或网站购物时直接使用，您只需在选择支付方式时选择“礼包”即可直接付款；也可以将卡内金额先转存至东方购物的礼包账户中，日后购物时再选择礼包账户进行支付。消费时，如果东方购物心意畅想礼包金额不足以支付商品价格，差额部分以其它支付方式补足。\n
2. 实体卡用户可选择直接货到刷东方购物心意畅想礼包，请于订购时提前告知客服人员，在物流送货上门时出示东方购物心意畅想礼包，物流人员会直接刷卡结款。
您可以拨打东方购物热线：962800，按语音提示操作直接进入东方购物心意畅想礼包业务选项，进行查询及转存；或登录东方购物网站及APP“礼包”充值及查询东方购物心意畅想礼包的余额。\n
3. 东方购物心意畅想礼包目前有100元、200元、500元、1000元四种面额。如果东方购物心意畅想礼包内金额转存至东方购物礼包账户中，将不受有效期限制，长期有效。
东方购物对超过3年有效期但仍有资金余额的东方购物心意畅想礼包，提供免费激活服务，续期一年。\n
4. 东方购物心意畅想礼包不记名、不挂失、不兑换现金、不退卡。
购物时用东方购物心意畅想礼包直接支付，一次只能付一张卡。所以如果您有多张东方购物心意畅想礼包，建议您把它们都转存到您东方购物帐户的礼包账户中，再在购物支付时选择“礼包账户”方式支付。\n
5. 如需购买东方购物心意畅想礼包，请拨打购卡热线：021-5111-9922，有销售人员专程为您服务，工作时间为：09:00-17:30。您也可以直接线上订购（仅限先行付款，不支持积分、预付款和抵用券）
    </string>


    <string name="encode_qrcode">生成二维码</string>
    <string name="dencode_qrcode">扫描二维码</string>
    <string name="code_text">请输入生成二维码的文本信息</string>
    <string name="qrcodetext">这里显示扫描结果</string>
    <string name="text_price"><![CDATA[<font size="3">¥</font>%1$s]]></string>

    <string name="occ_comment">亲,商品还满意吗？(成功发表评论并在页面中显示,可获奖励20鸥点/条)</string>

    <string name="webview_useragent">app_log Mozilla/5.0 (Linux; U; Android 4.3; zh-cn; C6802 Build/14.2.A.0.290) AppleWebKit/534.30 (KHTML, like Gecko) Android Mobile</string>

    <string name="text_underline_copy"><u>复制</u></string>

    <string name="sign_string">我们正在为您安排发放福利彩票，请耐心等待短信通知，彩票详情稍后可在个人中心查询，如有延迟，敬请谅解！</string>
    <string name="sign_string1">坚持是一种美德！</string>
    <string name="sign_string2">为您的坚持点赞，美好的一天从签到开始！</string>
    <string name="sign_string3">东方购物祝您今天好心情！</string>
</resources>
