<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/btn_association_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/icon_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_account_association"
            android:textColor="@color/text_black_444444"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_not_member"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/btn_not_vip"
            android:textColor="@color/text_grey_666666"
            android:textSize="14sp"
            android:layout_above="@+id/view"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/text_grey_DDDDDD"
            android:id="@+id/view"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="25dp">

            <com.ocj.oms.view.ClearEditText
                android:id="@+id/et_association_account"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:hint="@string/hint_login_edit"
                android:textSize="14sp"/>


        </RelativeLayout>

        <Button
            android:id="@+id/btn_association_commit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/radius_selector_btn_register"
            android:gravity="center"
            android:text="@string/btn_commit_association"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>

    <com.ocj.oms.mobile.view.CallTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/login_help"
        android:textColor="@color/text_grey_666666"
        android:textSize="12sp"/>
</LinearLayout>