<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="16dp"
              android:paddingTop="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_centerVertical="true"
            android:background="@color/text_grey_999999"/>

        <TextView
            android:id="@+id/tv_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/white"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/title_third_party_login"
            android:textColor="@color/text_grey_999999"
            android:textSize="15sp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="3dp"
            android:visibility="gone">


            <TextView
                android:id="@+id/ll_besttv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/third1"
                android:gravity="center_horizontal"
                android:text="@string/text_bestv"
                android:textColor="@color/text_grey_999999"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_wechat_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="3dp">

            <ImageView
                style="@style/third_login_img_style"
                android:src="@drawable/third2"/>

            <TextView
                style="@style/third_login_text_style"
                android:text="@string/text_wechat"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_qq_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="3dp">

            <ImageView
                style="@style/third_login_img_style"
                android:src="@drawable/third3"/>

            <TextView
                style="@style/third_login_text_style"
                android:text="@string/text_QQ"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_alipay_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="3dp">

            <ImageView
                style="@style/third_login_img_style"
                android:src="@drawable/third4"/>

            <TextView
                style="@style/third_login_text_style"
                android:text="@string/text_alipay"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_weibo_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="3dp">

            <ImageView
                style="@style/third_login_img_style"
                android:src="@drawable/third5"/>

            <TextView
                style="@style/third_login_text_style"
                android:text="@string/text_weibo"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>