<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/btn_pwd_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/icon_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_retrieve_pwd"
            android:textColor="@color/text_black_444444"
            android:textSize="18sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/text_grey_DDDDDD"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <com.ocj.oms.view.ClearEditText
            android:id="@+id/et_mobile_num"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_edittext_normal"
            android:drawableRight="@drawable/icon_clear"
            android:hint="@string/hint_input_reset_password"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/btn_next_step"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/radius_selector_btn_register"
            android:gravity="center"
            android:text="@string/btn_next_step"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>

    <com.ocj.oms.mobile.view.CallTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/login_help"
        android:textColor="@color/text_grey_666666"
        android:textSize="12sp"/>
</LinearLayout>
