<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/icon_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/newuser_register"
            android:textColor="@color/text_black_444444"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/btn_title_right_action"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/login"
            android:textColor="@color/text_grey_666666"
            android:textSize="15sp"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/text_grey_DDDDDD"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="30dp">

            <com.ocj.oms.view.ClearEditText
                android:id="@+id/et_mobile_num"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_edittext_normal"
                android:drawableRight="@drawable/icon_clear"
                android:hint="@string/hint_input_mobile_email"
                android:inputType="number"
                android:maxLength="20"
                android:maxLines="1"
                android:textCursorDrawable="@null"
                android:textSize="15sp"/>


        </RelativeLayout>


        <Button
            android:id="@+id/btn_rapid_register"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/radius_selector_btn_login"
            android:gravity="center"
            android:text="@string/commit"
            android:textColor="@color/white"
            android:textSize="17sp"/>


    </LinearLayout>

    <com.ocj.oms.mobile.view.CallTextView
        android:id="@+id/callTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/login_help"
        android:textColor="@color/text_grey_666666"
        android:textSize="13sp"/>
</LinearLayout>