<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/btn_retrieve_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/icon_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_retrieve_pwd"
            android:textColor="@color/text_black_444444"
            android:textSize="18sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/text_grey_DDDDDD"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="30dp">

        <com.ocj.oms.view.ClearEditText
            android:id="@+id/et_registered_num"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/bg_edittext_normal"
            android:drawableRight="@drawable/icon_clear"
            android:hint="@string/hint_input_register_num"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="14sp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <com.ocj.oms.view.ClearEditText
            android:id="@+id/et_retrieve_verify_code"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_edittext_normal"
            android:drawableRight="@drawable/icon_clear"
            android:hint="@string/hint_input_mobilecode"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="14sp"/>

        <com.ocj.oms.view.TimerTextView
            android:id="@+id/timmer_get_code"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btn_verify_code"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/btn_fetch_verify_code"
            android:textColor="@color/text_red_E5290D"
            android:textSize="12sp"
            app:timer_space="800"
            app:timer_total="120"/>

    </LinearLayout>

    <Button
        android:id="@+id/next_step"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="40dp"
        android:background="@color/text_red_E5290D"
        android:gravity="center"
        android:text="@string/btn_next_step"
        android:textColor="@color/white"
        android:textSize="16sp"/>

</LinearLayout>